syntax = "proto3";

package contact.v1;

import "buf/validate/validate.proto";

option go_package = "github.com/0utl1er-tech/phox-customer/gen/pb/contact/v1;contactv1";

service ContactService {
  rpc ListContact(ListContactRequest) returns (ListContactResponse);
  rpc ListAllContacts(ListAllContactsRequest) returns (ListAllContactsResponse);
  rpc CreateContact(CreateContactRequest) returns (CreateContactResponse);
  rpc UpdateContact(UpdateContactRequest) returns (UpdateContactResponse);
  rpc DeleteContact(DeleteContactRequest) returns (DeleteContactResponse);
  rpc ImportContactWithCustomer(ImportContactWithCustomerRequest) returns (ImportContactWithCustomerResponse);
}

message ListContactRequest {
  string customer_id = 1 [(buf.validate.field).string.uuid = true];
  int32 limit = 2;
  int32 offset = 3;
}

message ListContactResponse {
  repeated Contact contacts = 1;
}

message Contact {
  string id = 1;
  string customer_id = 2;
  string name = 3;
  string sex = 4;
  string phone = 5;
  string mail = 6 [(buf.validate.field).string.email = true];
  string fax = 7;
}

message CreateContactRequest {
  string customer_id = 1 [(buf.validate.field).string.uuid = true];
  string name = 2;
  string sex = 3;
  optional string phone = 4 [(buf.validate.field).string.min_len = 1];
  optional string mail = 5 [(buf.validate.field).string.email = true];
  optional string fax = 6 [(buf.validate.field).string.min_len = 1];
}

message CreateContactResponse {
  Contact created_contact = 1;
}

message UpdateContactRequest {
  string id = 1 [(buf.validate.field).string.uuid = true];
  optional string name = 2;
  optional string sex = 3;
  optional string phone = 4 [(buf.validate.field).string.min_len = 1];
  optional string mail = 5 [(buf.validate.field).string.email = true];
  optional string fax = 6 [(buf.validate.field).string.min_len = 1];
}

message UpdateContactResponse {
  Contact updated_contact = 1;
}

message DeleteContactRequest {
  string id = 1 [(buf.validate.field).string.uuid = true];
}

message DeleteContactResponse {
  string id = 1;
}

// ListAllContacts - 全連絡先一覧取得（マスター画面用）
message ListAllContactsRequest {
  int32 limit = 1;
  int32 offset = 2;
}

message ListAllContactsResponse {
  repeated ContactWithCustomer contacts = 1;
}

message ContactWithCustomer {
  string id = 1;
  string customer_id = 2;
  string name = 3;
  string sex = 4;
  string phone = 5;
  string mail = 6;
  string fax = 7;
  CustomerSummary customer = 8;
}

message CustomerSummary {
  string id = 1;
  string name = 2;
  string corporation = 3;
}

// ImportContactWithCustomer - customer_idを必須とするインポート
message ImportContactWithCustomerRequest {
  string csv_data = 1;
}

message ImportContactWithCustomerResponse {
  int32 imported_count = 1;
  int32 failed_count = 2;
  repeated ImportContactError errors = 3;
}

message ImportContactError {
  int32 line_number = 1;
  string error_message = 2;
}
